--- a/frontend/studente/src/pages/addCertification/addCertification.html
+++ b/frontend/studente/src/pages/addCertification/addCertification.html
@@ -77,7 +77,7 @@
                                     </td>
                                 </tr>
       <ion-row>
- <ion-col><button ion-button block (click)="addCertification()">{{'save_button_label'|translate}}</button></ion-col><ion-col><button ion-button block  (click)="discard()">{{'cancel_button_label'|translate}}</button></ion-col>
+ <ion-col><button  class="action-button " ion-button block (click)="addCertification()">{{'save_button_label'|translate}}</button></ion-col><ion-col><button  class="action-button " ion-button block  (click)="discard()">{{'cancel_button_label'|translate}}</button></ion-col>
     </ion-row>
   </ion-grid>
 
