--- a/frontend/studente/src/pages/certifications/certifications.html
+++ b/frontend/studente/src/pages/certifications/certifications.html
@@ -10,9 +10,9 @@
 </ion-header>
 
 <ion-content padding>
-  <div class="row-add-stage">
-    <button class="button-add-stage" ion-button clear (click)="addNewCertification()">{{'certification_add_new_button'|translate}}</button>
-  </div>
+  <ion-grid>
+  <ion-row>
+    <ion-col col-8>
   <div class="stage-filter">
     <input type="text" [(ngModel)]="filter" placeholder="{{'stage_filter_placeholder'|translate}}">
     <ion-icon class="filter-search-icon" name="md-search"></ion-icon>
@@ -24,27 +24,38 @@
       </ion-select>
     </ion-item>
   </div>
+    </ion-col>
+     <ion-col col-4>
+    <div>
+    <button class="button-add-stage label-button" ion-button clear (click)="addNewCertification()">{{'certification_add_new_button'|translate}}</button>
+  </div>
+    </ion-col>
+    </ion-row>
+  </ion-grid>
   <ion-list>
     <ion-card  *ngFor="let certification of certifications| experiencefilter:filter:'title'| orderBy:'certification.experience.attributes.title':order">
-      <div class="expandable-list">
-        <div class="stage-title">{{certification.experience.attributes.title}}</div>
-         <div class="stage-certificate"><span *ngIf="certification.certificate">{{'certificate_label'|translate}}</span><span *ngIf="!certification.certificate">{{'not_certificate_label'|translate}}</span></div>
-        <button class="stage-expansion" clear  ion-button icon-only (click)="toggleDetails(certification)"> <ion-icon class="stage-expansion-icon" item-right [name]="isDetailsShown(certification) ? 'ios-arrow-up' : 'ios-arrow-down'"></ion-icon></button>
+      <div class="experience-expandable-list">
+        <div class="experience-title">{{certification.experience.attributes.title}}</div>
+         <div class="experience-certificate"><span *ngIf="certification.certificate">{{'certificate_label'|translate}}</span><span *ngIf="!certification.certificate">{{'not_certificate_label'|translate}}</span></div>
+        <button class="stage-expansion" clear  ion-button icon-only (click)="toggleDetails(certification)"> <ion-icon class="experience-expansion-icon" item-right [name]="isDetailsShown(certification) ? 'ios-arrow-up' : 'ios-arrow-down'"></ion-icon></button>
       </div>
       <div padding *ngIf="isDetailsShown(certification)">
-          <div class="stage-title"> <span class="registration-institute-label">{{'certificate_title_label'|translate}}</span> {{certification.experience.attributes.title}}</div>
-         <div class="stage-title"> <span class="registration-institute-label">{{'certificate_dateFrom_label'|translate}}</span>{{certification.experience.attributes.dateFrom |date}}</div>
-         <div class="stage-title"> <span class="registration-institute-label">{{'certificate_dateTo_label'|translate}}</span>{{certification.experience.attributes.dateTo |date}}</div>
-         <div class="stage-title"> <span class="registration-institute-label">{{'certificate_location_label'|translate}}</span>{{certification.experience.attributes.location}}</div>
-         <div class="stage-title"> <span class="registration-institute-label">{{'certificate_description_label'|translate}}</span>{{certification.experience.attributes.description}}</div>
+          <div class="experience-title"> <span class="registration-institute-label">{{'certificate_title_label'|translate}}</span> {{certification.experience.attributes.title}}</div>
+         <div class="experience-title"> <span class="registration-institute-label">{{'certificate_dateFrom_label'|translate}}</span>{{certification.experience.attributes.dateFrom |date}}</div>
+         <div class="experience-title"> <span class="registration-institute-label">{{'certificate_dateTo_label'|translate}}</span>{{certification.experience.attributes.dateTo |date}}</div>
+         <div class="experience-title"> <span class="registration-institute-label">{{'certificate_location_label'|translate}}</span>{{certification.experience.attributes.location}}</div>
+         <div class="experience-title"> <span class="registration-institute-label">{{'certificate_description_label'|translate}}</span>{{certification.experience.attributes.description}}</div>
         <div>
-         <div class="stage-title" *ngIf="certification.certificate!=null"> <span class="registration-institute-label">{{'certificate_certificate_label'|translate}}</span><a href="{{certification.certificate.documentUri}}" download="certificate">Download</a></div>
+         <div class="experience-title" *ngIf="certification.certificate!=null"> <span class="registration-institute-label">{{'certificate_certificate_label'|translate}}</span><a href="{{certification.certificate.documentUri}}" download="certificate">Download</a></div>
         <div>
-          <button class="button-add-stage" ion-button clear (click)="deleteCertification(certification)">{{'delete_button'|translate}}</button>
-          <button class="button-add-stage" ion-button clear (click)="updateCertification(certification)">{{'update_button'|translate}}</button>
+          <button class="label-button" ion-button clear (click)="deleteCertification(certification)">{{'delete_button'|translate}}</button>
+          <button class="label-button" ion-button clear (click)="updateCertification(certification)">{{'update_button'|translate}}</button>
         </div>
       </div>
       </div>
     </ion-card>
   </ion-list>
+        <ion-card class="eperience-empty-list-label" *ngIf="(certifications.length==0)">
+      {{'certifications_empty_list_label'|translate}}
+  </ion-card>
 </ion-content>
