--- a/frontend/studente/src/pages/institute/institute.html
+++ b/frontend/studente/src/pages/institute/institute.html
@@ -14,15 +14,15 @@
   </div>
   <ion-list>
     <ion-card  *ngFor="let registration of registrations| experiencefilter:filter:'title'| orderBy:'exam.attributes.title':order">
-      <div class="expandable-list">
-        <div class="stage-title">{{registration.course}}</div>
-        <button class="stage-expansion" clear  ion-button icon-only (click)="toggleDetails(registration)"> <ion-icon class="stage-expansion-icon" item-right [name]="isDetailsShown(registration) ? 'ios-arrow-up' : 'ios-arrow-down'"></ion-icon></button>
+      <div class="registration-expandable-list">
+        <div class="registration-title">{{registration.course}}</div>
+        <button class="stage-expansion" clear  ion-button icon-only (click)="toggleDetails(registration)"> <ion-icon class="registration-expansion-icon" item-right [name]="isDetailsShown(registration) ? 'ios-arrow-up' : 'ios-arrow-down'"></ion-icon></button>
       </div>
       <div padding *ngIf="isDetailsShown(registration)">
-        <div class="stage-title"> <span class="registration-institute-label">{{'registration_course_label'|translate}}</span>{{registration.course}}</div>
-        <div class="stage-title"> <span class="registration-institute-label">{{'registration_year_label'|translate}}</span>{{registration.schoolYear}}</div>
-        <div class="stage-title"><span class="registration-institute-label"> {{'registration_class_label'|translate}}</span>{{registration.classroom}}</div>
-        <div class="stage-title"><span class="registration-institute-label"> {{'registration_teachingUnit_label'|translate}}</span>{{teachingUnit.name}}</div>
+        <div class="registration-title"> <span class="registration-institute-label">{{'registration_course_label'|translate}}</span>{{registration.course}}</div>
+        <div class="registration-title"> <span class="registration-institute-label">{{'registration_year_label'|translate}}</span>{{registration.schoolYear}}</div>
+        <div class="registration-title"><span class="registration-institute-label"> {{'registration_class_label'|translate}}</span>{{registration.classroom}}</div>
+        <div class="registration-title"><span class="registration-institute-label"> {{'registration_teachingUnit_label'|translate}}</span>{{teachingUnit.name}}</div>
       </div>
     </ion-card>
   </ion-list>
