--- a/frontend/studente/src/pages/activities/activities.html
+++ b/frontend/studente/src/pages/activities/activities.html
@@ -10,10 +10,10 @@
 </ion-header>
 
 <ion-content padding>
-  <div class="row-add-stage">
-    <button class="button-add-stage" ion-button clear (click)="addNewActivity()">{{'activity_add_new_button'|translate}}</button>
-  </div>
-  <div class="stage-filter">
+  <ion-grid>
+  <ion-row>
+    <ion-col col-8>
+    <div class="stage-filter">
     <input type="text" [(ngModel)]="filter" placeholder="{{'stage_filter_placeholder'|translate}}">
     <ion-icon class="filter-search-icon" name="md-search"></ion-icon>
     <ion-item>
@@ -24,25 +24,36 @@
       </ion-select>
     </ion-item>
   </div>
-  <ion-list>
+      </ion-col>
+    <ion-col col-4>
+  <div>
+    <button class="button-add-stage label-button" ion-button clear (click)="addNewActivity()">{{'activity_add_new_button'|translate}}</button>
+  </div>
+</ion-col>
+    </ion-row>
+    </ion-grid>
+  <ion-list *ngIf="(activities.length>0)">
     <ion-card  *ngFor="let activity of activities| experiencefilter:filter:'title'| orderBy:'activity.attributes.title':order">
-      <div class="expandable-list">
-        <div class="stage-title">{{activity.attributes.title}}</div>
-        <div class="stage-certificate"><span *ngIf="activity.certificate">{{'certificate_label'|translate}}</span><span *ngIf="!activity.certificate">{{'not_certificate_label'|translate}}</span></div>
-        <button class="stage-expansion" clear  ion-button icon-only (click)="toggleDetails(activity)"> <ion-icon class="stage-expansion-icon" item-right [name]="isDetailsShown(activity) ? 'ios-arrow-up' : 'ios-arrow-down'"></ion-icon></button>
+      <div class="experience-expandable-list">
+        <div class="experience-title">{{activity.attributes.title}}</div>
+        <div class="experience-certificate"><span *ngIf="activity.certificate">{{'certificate_label'|translate}}</span><span *ngIf="!activity.certificate">{{'not_certificate_label'|translate}}</span></div>
+        <button class="stage-expansion" clear  ion-button icon-only (click)="toggleDetails(activity)"> <ion-icon class="experience-expansion-icon" item-right [name]="isDetailsShown(activity) ? 'ios-arrow-up' : 'ios-arrow-down'"></ion-icon></button>
       </div>
       <div padding *ngIf="isDetailsShown(activity)">
-          <div class="stage-title"> <span class="registration-institute-label">{{'activity_title_label'|translate}}</span> {{activity.attributes.title}}</div>
-         <div class="stage-title"> <span class="registration-institute-label">{{'activity_dateFrom_label'|translate}}</span>{{activity.attributes.dateFrom |date}}</div>
-         <div class="stage-title"> <span class="registration-institute-label">{{'activity_dateTo_label'|translate}}</span>{{activity.attributes.dateTo |date}}</div>
-         <div class="stage-title"> <span class="registration-institute-label">{{'activity_location_label'|translate}}</span>{{activity.attributes.location}}</div>
-         <div class="stage-title"> <span class="registration-institute-label">{{'activity_description_label'|translate}}</span>{{activity.attributes.description}}</div>
+          <div class="experience-title"> <span class="registration-institute-label">{{'activity_title_label'|translate}}</span> {{activity.attributes.title}}</div>
+         <div class="experience-title"> <span class="registration-institute-label">{{'activity_dateFrom_label'|translate}}</span>{{activity.attributes.dateFrom |date}}</div>
+         <div class="experience-title"> <span class="registration-institute-label">{{'activity_dateTo_label'|translate}}</span>{{activity.attributes.dateTo |date}}</div>
+         <div class="experience-title"> <span class="registration-institute-label">{{'activity_location_label'|translate}}</span>{{activity.attributes.location}}</div>
+         <div class="experience-title"> <span class="registration-institute-label">{{'activity_description_label'|translate}}</span>{{activity.attributes.description}}</div>
         <div >
-          <button class="button-add-stage" ion-button clear (click)="deleteActivity(activity)">{{'delete_button'|translate}}</button>
-          <button class="button-add-stage" ion-button clear (click)="updateActivity(activity)">{{'update_button'|translate}}</button>
+          <button class="label-button" ion-button clear (click)="deleteActivity(activity)">{{'delete_button'|translate}}</button>
+          <button class="label-button" ion-button clear (click)="updateActivity(activity)">{{'update_button'|translate}}</button>
         </div>
       </div>
 
     </ion-card>
   </ion-list>
+      <ion-card class="eperience-empty-list-label" *ngIf="(activities.length==0)">
+      {{'activities_empty_list_label'|translate}}
+  </ion-card>
 </ion-content>
