--- a/frontend/studente/src/pages/events/events.html
+++ b/frontend/studente/src/pages/events/events.html
@@ -10,9 +10,9 @@
 </ion-header>
 
 <ion-content padding>
-  <div class="row-add-stage">
-    <button class="button-add-stage" ion-button clear (click)="addNewEvent()">{{'event_add_new_button'|translate}}</button>
-  </div>
+  <ion-grid>
+  <ion-row>
+    <ion-col col-8>
   <div class="stage-filter">
     <input type="text" [(ngModel)]="filter" placeholder="{{'stage_filter_placeholder'|translate}}">
     <ion-icon class="filter-search-icon" name="md-search"></ion-icon>
@@ -24,25 +24,37 @@
       </ion-select>
     </ion-item>
   </div>
-  <ion-list>
+       </ion-col>
+    <ion-col col-4>
+    <div >
+    <button class="button-add-stage label-button" ion-button clear (click)="addNewEvent()">{{'event_add_new_button'|translate}}</button>
+  </div>
+    </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-list  *ngIf="(events.length>0)">
     <ion-card  *ngFor="let event of events| experiencefilter:filter:'title'| orderBy:'event.attributes.title':order">
-      <div class="expandable-list">
-        <div class="stage-title">{{event.experience.attributes.title}}</div>
-        <div class="stage-certificate"><span *ngIf="event.certificate">{{'certificate_label'|translate}}</span><span *ngIf="!event.certificate">{{'not_certificate_label'|translate}}</span></div>
-        <button class="stage-expansion" clear  ion-button icon-only (click)="toggleDetails(event)"> <ion-icon class="stage-expansion-icon" item-right [name]="isDetailsShown(event) ? 'ios-arrow-up' : 'ios-arrow-down'"></ion-icon></button>
+      <div class="experience-expandable-list">
+        <div class="experience-title">{{event.attributes.title}}</div>
+        <div class="experience-certificate"><span *ngIf="event.certificate">{{'certificate_label'|translate}}</span><span *ngIf="!event.certificate">{{'not_certificate_label'|translate}}</span></div>
+        <button class="stage-expansion" clear  ion-button icon-only (click)="toggleDetails(event)"> <ion-icon class="experience-expansion-icon" item-right [name]="isDetailsShown(event) ? 'ios-arrow-up' : 'ios-arrow-down'"></ion-icon></button>
       </div>
       <div padding *ngIf="isDetailsShown(event)">
-         <div class="stage-title"> <span class="registration-institute-label">{{'event_title_label'|translate}}</span> {{event.experience.attributes.title}}</div>
-         <div class="stage-title"> <span class="registration-institute-label">{{'event_dateFrom_label'|translate}}</span>{{event.experience.attributes.dateFrom |date}}</div>
-         <div class="stage-title"> <span class="registration-institute-label">{{'event_dateTo_label'|translate}}</span>{{event.experience.attributes.dateTo |date}}</div>
-         <div class="stage-title"> <span class="registration-institute-label">{{'event_location_label'|translate}}</span>{{event.experience.attributes.location}}</div>
-         <div class="stage-title"> <span class="registration-institute-label">{{'event_description_label'|translate}}</span>{{event.experience.attributes.description}}</div>
+         <div class="experience-title"> <span class="registration-institute-label">{{'event_title_label'|translate}}</span> {{event.attributes.title}}</div>
+         <div class="experience-title"> <span class="registration-institute-label">{{'event_dateFrom_label'|translate}}</span>{{event.attributes.dateFrom |date}}</div>
+         <div class="experience-title"> <span class="registration-institute-label">{{'event_dateTo_label'|translate}}</span>{{event.attributes.dateTo |date}}</div>
+         <div class="experience-title"> <span class="registration-institute-label">{{'event_location_label'|translate}}</span>{{event.attributes.location}}</div>
+         <div class="experience-title"> <span class="registration-institute-label">{{'event_description_label'|translate}}</span>{{event.attributes.description}}</div>
         <div >
-          <button class="button-add-stage" ion-button clear (click)="deleteEvent(event)">{{'delete_button'|translate}}</button>
-          <button class="button-add-stage" ion-button clear (click)="updateEvent(event)">{{'update_button'|translate}}</button>
+          <button class="label-button" ion-button clear (click)="deleteEvent(event)">{{'delete_button'|translate}}</button>
+          <button class="label-button" ion-button clear (click)="updateEvent(event)">{{'update_button'|translate}}</button>
         </div>
       </div>
 
     </ion-card>
   </ion-list>
+    <ion-card class="eperience-empty-list-label" *ngIf="(events.length==0)">
+      {{'events_empty_list_label'|translate}}
+  </ion-card>
+
 </ion-content>
