--- a/frontend/studente/src/pages/stages/stages.html
+++ b/frontend/studente/src/pages/stages/stages.html
@@ -10,10 +10,10 @@
 </ion-header>
 
 <ion-content padding>
-  <div class="row-add-stage">
-    <button class="button-add-stage" ion-button clear (click)="addNewStage()">{{'stage_add_new_button'|translate}}</button>
-  </div>
-  <div class="stage-filter">
+ <ion-grid>
+  <ion-row>
+    <ion-col col-8>
+  <div class="search-filter">
     <input type="text" [(ngModel)]="filter" placeholder="{{'stage_filter_placeholder'|translate}}">
     <ion-icon class="filter-search-icon" name="md-search"></ion-icon>
     <ion-item>
@@ -24,22 +24,30 @@
       </ion-select>
     </ion-item>
   </div>
+            </ion-col>
+    <ion-col col-4>
+    <div >
+    <button class="button-add-stage label-button" ion-button clear (click)="addNewStage()">{{'stage_add_new_button'|translate}}</button>
+  </div>
+    </ion-col>
+   </ion-row>
+  </ion-grid>
   <ion-list>
     <ion-card  *ngFor="let stage of stages| experiencefilter:filter:'title'| orderBy:'stage.attributes.title':order">
-      <div class="expandable-list">
-        <div class="stage-title">{{stage.attributes.title}}</div>
- <div class="stage-certificate"><span *ngIf="stage.certificate">{{'certificate_label'|translate}}</span><span *ngIf="!stage.certificate">{{'not_certificate_label'|translate}}</span></div>        <button class="stage-expansion" clear  ion-button icon-only (click)="toggleDetails(stage)"> <ion-icon class="stage-expansion-icon" item-right [name]="isDetailsShown(stage) ? 'ios-arrow-up' : 'ios-arrow-down'"></ion-icon></button>
+      <div class="experience-expandable-list">
+        <div class="experience-title">{{stage.attributes.title}}</div>
+ <div class="experience-certificate"><span *ngIf="stage.certificate">{{'certificate_label'|translate}}</span><span *ngIf="!stage.certificate">{{'not_certificate_label'|translate}}</span></div>        <button class="stage-expansion" clear  ion-button icon-only (click)="toggleDetails(stage)"> <ion-icon class="experience-expansion-icon" item-right [name]="isDetailsShown(stage) ? 'ios-arrow-up' : 'ios-arrow-down'"></ion-icon></button>
       </div>
       <div padding *ngIf="isDetailsShown(stage)">
-        <div class="stage-title"> <span class="registration-institute-label">{{'stage_title_label'|translate}}</span> {{stage.attributes.title}}</div>
-         <div class="stage-title"> <span class="registration-institute-label">{{'stage_dateFrom_label'|translate}}</span>{{stage.attributes.dateFrom |date}}</div>
-         <div class="stage-title"> <span class="registration-institute-label">{{'stage_dateTo_label'|translate}}</span>{{stage.attributes.dateTo |date}}</div>
-         <div class="stage-title"> <span class="registration-institute-label">{{'stage_location_label'|translate}}</span>{{stage.attributes.location}}</div>
-         <div class="stage-title"> <span class="registration-institute-label">{{'stage_description_label'|translate}}</span>{{stage.attributes.description}}</div>
+        <div class="experience-title"> <span class="registration-institute-label">{{'stage_title_label'|translate}}</span> {{stage.attributes.title}}</div>
+         <div class="experience-title"> <span class="registration-institute-label">{{'stage_dateFrom_label'|translate}}</span>{{stage.attributes.dateFrom |date}}</div>
+         <div class="experience-title"> <span class="registration-institute-label">{{'stage_dateTo_label'|translate}}</span>{{stage.attributes.dateTo |date}}</div>
+         <div class="experience-title"> <span class="registration-institute-label">{{'stage_location_label'|translate}}</span>{{stage.attributes.location}}</div>
+         <div class="experience-title"> <span class="registration-institute-label">{{'stage_description_label'|translate}}</span>{{stage.attributes.description}}</div>
 
         <div >
-          <button class="button-add-stage" ion-button clear (click)="deleteStage(stage)">{{'delete_button'|translate}}</button>
-          <button class="button-add-stage" ion-button clear (click)="updateStage(stage)">{{'update_button'|translate}}</button>
+          <button class="label-button" ion-button clear (click)="deleteStage(stage)">{{'delete_button'|translate}}</button>
+          <button class="label-button" ion-button clear (click)="updateStage(stage)">{{'update_button'|translate}}</button>
         </div>
       </div>
 
