--- a/frontend/studente/src/pages/addCertification/addCertification.html
+++ b/frontend/studente/src/pages/addCertification/addCertification.html
@@ -10,44 +10,67 @@
   <ion-grid>
 
      <ion-row>
-    <ion-col><ion-label>{{'addCertificate_title_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addCertificate_title_placeholder'|translate}}" [(ngModel)]="certification.title"></ion-input>
+    <ion-col col-3><ion-label>{{'addCertificate_title_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addCertificate_title_placeholder'|translate}}" [(ngModel)]="certification.title"></ion-input>
     </ion-item></ion-col>
     </ion-row>
      <ion-row>
 
-    <ion-col><ion-label>{{'addCertificate_dateFrom_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-datetime displayFormat="DD/MM/YYYY"  [(ngModel)]="dateFrom" placeholder="{{'addCertificate_date_from_placeholder'|translate}}" ></ion-datetime>
+    <ion-col col-3><ion-label>{{'addCertificate_dateFrom_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-datetime displayFormat="DD/MM/YYYY"  [(ngModel)]="dateFrom" placeholder="{{'addCertificate_date_from_placeholder'|translate}}" ></ion-datetime>
     </ion-item></ion-col>
     </ion-row>
          <ion-row>
-    <ion-col><ion-label>{{'addCertificate_dateTo_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-datetime displayFormat="DD/MM/YYYY"  [(ngModel)]="dateTo" placeholder="{{'addCertificate_date_to_placeholder'|translate}}" ></ion-datetime>
+    <ion-col col-3><ion-label>{{'addCertificate_dateTo_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-datetime displayFormat="DD/MM/YYYY"  [(ngModel)]="dateTo" placeholder="{{'addCertificate_date_to_placeholder'|translate}}" ></ion-datetime>
     </ion-item></ion-col>
     </ion-row>
       <ion-row>
 
-    <ion-col><ion-label>{{'addCertificate_address_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addCertificate_address_placeholder'|translate}}" [(ngModel)]="certification.location"></ion-input>
+    <ion-col col-3><ion-label>{{'addCertificate_address_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addCertificate_address_placeholder'|translate}}" [(ngModel)]="certification.location"></ion-input>
     </ion-item></ion-col>
     </ion-row>
       <ion-row>
 
-    <ion-col><ion-label>{{'addCertificate_tutor_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addCertificate_tutor_placeholder'|translate}}" [(ngModel)]="certification.contact"></ion-input>
+    <ion-col col-3><ion-label>{{'addCertificate_tutor_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addCertificate_tutor_placeholder'|translate}}" [(ngModel)]="certification.contact"></ion-input>
     </ion-item></ion-col>
     </ion-row>
       <ion-row>
 
-    <ion-col><ion-label>{{'addCertificate_description_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addCertificate_description_placeholder'|translate}}" [(ngModel)]="certification.description"></ion-input>
+    <ion-col col-3><ion-label>{{'addCertificate_description_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addCertificate_description_placeholder'|translate}}" [(ngModel)]="certification.description"></ion-input>
     </ion-item></ion-col>
     </ion-row>
+        <ion-row *ngIf="certificate && certificate.documentUri">
+
+    <ion-col col-3><ion-label>{{'addCertificate_present_certificate_label'|translate}}</ion-label></ion-col>
+          <ion-col col-6> <ion-item>    <a download="certificate.txt" class="button label-button" href="{{ certificate.documentUri}}"><ion-icon name="md-download"></ion-icon></a>
+
+    </ion-item></ion-col>
+       <ion-col col-3>
+          <button class="button-add-stage label-button" ion-button clear (click)="removeActualCertificate()">{{'addCertificate_remove_actual_certificate_label'|translate}}</button>
+      </ion-col>
+      </ion-row>
     <ion-row>
 
-    <ion-col><ion-label>{{'addStage_certificate_label'|translate}}</ion-label></ion-col><ion-col> <ion-item>    <input type="file" ng2FileSelect [uploader]="uploader" />
+    <ion-col col-3>
+      <ion-label>{{'addCertificate_load_certificate_label'|translate}}</ion-label>
+    </ion-col>
+      <ion-col col-6>
+        <ion-item>
+          <input id = "uploadInputFile"  type="file" ng2FileSelect [uploader]="uploader" />
+        </ion-item>
+      </ion-col>
+       <ion-col col-3>
+          <button class="button-add-stage label-button" ion-button clear (click)="removeCertification()">{{'addCertificate_remove_certificate_label'|translate}}</button>
+      </ion-col>
 
-    </ion-item></ion-col>
-      </ion-row>
-    <ion-row *ngIf="certificate!=null">
+    </ion-row>
+
+<!--
+    <ion-row *ngIf="certificate.documentUri!=null">
           <ion-col ><ion-label>{{'certificate'|translate}}</ion-label></ion-col><ion-col> <ion-item>  {{certificate.documentUri}}
 
     </ion-item></ion-col>
     </ion-row>
+-->
+<!--
      <tr *ngFor="let item of uploader.queue">
                                     <td><strong>{{ item.file.name }}</strong></td>
                                     <td nowrap>{{ item.file.size/1024/1024 | number:'.2' }} MB</td>
@@ -62,20 +85,29 @@
                                         <span *ngIf="item.isError"><i class="glyphicon glyphicon-remove"></i></span>
                                     </td>
                                     <td nowrap>
+-->
+<!--
                                         <button type="button" class="btn btn-success btn-xs"
                                                 (click)="uploadCertificate(item)" [disabled]="item.isReady || item.isUploading || item.isSuccess">
                                             <span class="glyphicon glyphicon-upload"></span> Upload
                                         </button>
+-->
+<!--
                                         <button type="button" class="btn btn-warning btn-xs"
                                                 (click)="item.cancel()" [disabled]="!item.isUploading">
                                             <span class="glyphicon glyphicon-ban-circle"></span> Cancel
                                         </button>
+-->
+<!--
                                         <button type="button" class="btn btn-danger btn-xs"
                                                 (click)="item.remove()">
                                             <span class="glyphicon glyphicon-trash"></span> Remove
                                         </button>
+-->
+<!--
                                     </td>
                                 </tr>
+-->
       <ion-row>
  <ion-col><button  class="action-button " ion-button block (click)="addCertification()">{{'save_button_label'|translate}}</button></ion-col><ion-col><button  class="action-button " ion-button block  (click)="discard()">{{'cancel_button_label'|translate}}</button></ion-col>
     </ion-row>
