--- a/frontend/studente/src/pages/addStage/addStage.html
+++ b/frontend/studente/src/pages/addStage/addStage.html
@@ -10,32 +10,57 @@
   <ion-grid>
 
      <ion-row>
-    <ion-col><ion-label>{{'addStage_title_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addStage_title_placeholder'|translate}}" [(ngModel)]="stage.title"></ion-input>
+    <ion-col col-3><ion-label>{{'addStage_title_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addStage_title_placeholder'|translate}}" [(ngModel)]="stage.title"></ion-input>
     </ion-item></ion-col>
     </ion-row>
      <ion-row>
 
-    <ion-col><ion-label>{{'addStage_period_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-datetime displayFormat="DD/MM/YYYY"  [(ngModel)]="dateFrom" placeholder="{{'addStage_date_from_placeholder'|translate}}" ></ion-datetime>
+    <ion-col col-3><ion-label>{{'addStage_period_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-datetime displayFormat="DD/MM/YYYY"  [(ngModel)]="dateFrom" placeholder="{{'addStage_date_from_placeholder'|translate}}" ></ion-datetime>
     </ion-item></ion-col>
     </ion-row>
          <ion-row>
-    <ion-col><ion-label>{{'addStage_period_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-datetime displayFormat="DD/MM/YYYY"  [(ngModel)]="dateTo" placeholder="{{'addStage_date_to_placeholder'|translate}}" ></ion-datetime>
+    <ion-col col-3><ion-label>{{'addStage_period_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-datetime displayFormat="DD/MM/YYYY"  [(ngModel)]="dateTo" placeholder="{{'addStage_date_to_placeholder'|translate}}" ></ion-datetime>
     </ion-item></ion-col>
     </ion-row>
       <ion-row>
 
-    <ion-col><ion-label>{{'addStage_address_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addStage_address_placeholder'|translate}}" [(ngModel)]="stage.location"></ion-input>
+    <ion-col col-3><ion-label>{{'addStage_address_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addStage_address_placeholder'|translate}}" [(ngModel)]="stage.location"></ion-input>
     </ion-item></ion-col>
     </ion-row>
       <ion-row>
 
-    <ion-col><ion-label>{{'addStage_tutor_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addStage_tutor_placeholder'|translate}}" [(ngModel)]="stage.contact"></ion-input>
+    <ion-col col-3><ion-label>{{'addStage_tutor_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addStage_tutor_placeholder'|translate}}" [(ngModel)]="stage.contact"></ion-input>
     </ion-item></ion-col>
     </ion-row>
       <ion-row>
 
-    <ion-col><ion-label>{{'addStage_description_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addStage_description_placeholder'|translate}}" [(ngModel)]="stage.description"></ion-input>
+    <ion-col col-3><ion-label>{{'addStage_description_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addStage_description_placeholder'|translate}}" [(ngModel)]="stage.description"></ion-input>
     </ion-item></ion-col>
+    </ion-row>
+    <ion-row *ngIf="certificate && certificate.documentPresent">
+
+    <ion-col col-3><ion-label>{{'addCertificate_present_certificate_label'|translate}}</ion-label></ion-col>
+          <ion-col col-6> <ion-item>    <a download="certificate.txt" class="button label-button" href="{{ certificate.documentUri}}"><ion-icon name="md-download"></ion-icon></a>
+
+    </ion-item></ion-col>
+       <ion-col col-3>
+          <button class="button-add-stage label-button" ion-button clear (click)="removeActualCertificate()">{{'addCertificate_remove_actual_certificate_label'|translate}}</button>
+      </ion-col>
+      </ion-row>
+    <ion-row>
+
+    <ion-col col-3>
+      <ion-label>{{'addCertificate_load_certificate_label'|translate}}</ion-label>
+    </ion-col>
+      <ion-col col-6>
+        <ion-item>
+          <input id = "uploadInputFile"  type="file" ng2FileSelect [uploader]="uploader" />
+        </ion-item>
+      </ion-col>
+       <ion-col col-3>
+          <button class="button-add-stage label-button" ion-button clear (click)="removeCertification()">{{'addCertificate_remove_certificate_label'|translate}}</button>
+      </ion-col>
+
     </ion-row>
       <ion-row>
  <ion-col><button  class="action-button " ion-button block (click)="addStage()">{{'save_button_label'|translate}}</button></ion-col><ion-col><button  class="action-button " ion-button block (click)="discard()">{{'cancel_button_label'|translate}}</button></ion-col>
