--- a/frontend/studente/src/pages/events/events.html
+++ b/frontend/studente/src/pages/events/events.html
@@ -45,7 +45,7 @@
          <div class="experience-title"> <span class="registration-institute-label">{{'event_dateTo_label'|translate}}</span>{{event.attributes.dateTo |date}}</div>
          <div class="experience-title"> <span class="registration-institute-label">{{'event_location_label'|translate}}</span>{{event.attributes.location}}</div>
          <div class="experience-title"> <span class="registration-institute-label">{{'event_description_label'|translate}}</span>{{event.attributes.description}}</div>
-        <div >
+        <div *ngIf="!event.attributes.institutional">
           <button class="label-button" ion-button clear (click)="deleteEvent(event)">{{'delete_button'|translate}}</button>
           <button class="label-button" ion-button clear (click)="updateEvent(event)">{{'update_button'|translate}}</button>
         </div>
