--- a/frontend/studente/src/index.html
+++ b/frontend/studente/src/index.html
@@ -15,9 +15,25 @@
   <script src="cordova.js"></script>
 
   <link href="build/main.css" rel="stylesheet">
+  
+  <script>
+    function init() {
+      var queryString = location.hash.substring(1);
+      var params = {};
+      var regex = /([^&=]+)=([^&]*)/g, m;
+      while (m = regex.exec(queryString)) {
+        params[decodeURIComponent(m[1])] = decodeURIComponent(m[2]);
+        // Try to exchange the param values for an access token.
+        if (params['access_token']) {
+          sessionStorage.access_token = params['access_token'];
+          window.location = '/';
+        }
+      }
+    } 
+  </script>  
 
 </head>
-<body>
+<body onload="init()">
 
   <!-- Ionic's root component and where the app will load -->
   <ion-app></ion-app>
