--- a/frontend/studente/src/pages/home/home.html
+++ b/frontend/studente/src/pages/home/home.html
@@ -37,11 +37,14 @@
           {{ 'home_activity_label' | translate |uppercase}}
         </div>
       </ion-card>
+<!--
+no more supported
             <ion-card class="home-experience" (click)="openEvents()">
         <div>
           {{ 'home_events_label' | translate |uppercase}}
         </div>
       </ion-card>
+-->
 <!--
             <ion-card class="home-experience" (click)="openCV()">
         <div>
