--- a/frontend/studente/src/pages/addCertification/addCertification.html
+++ b/frontend/studente/src/pages/addCertification/addCertification.html
@@ -37,7 +37,7 @@
     <ion-col col-3><ion-label>{{'addCertificate_description_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addCertificate_description_placeholder'|translate}}" [(ngModel)]="certification.description"></ion-input>
     </ion-item></ion-col>
     </ion-row>
-        <ion-row *ngIf="certificate && certificate.documentUri">
+        <ion-row *ngIf="certificate && certificate.documentPresent">
 
     <ion-col col-3><ion-label>{{'addCertificate_present_certificate_label'|translate}}</ion-label></ion-col>
           <ion-col col-6> <ion-item>    <a download="certificate.txt" class="button label-button" href="{{ certificate.documentUri}}"><ion-icon name="md-download"></ion-icon></a>
