--- a/frontend/studente/src/pages/addActivity/addActivity.html
+++ b/frontend/studente/src/pages/addActivity/addActivity.html
@@ -11,32 +11,32 @@
   <ion-grid>
 
      <ion-row>
-    <ion-col><ion-label>{{'addActivity_title_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addActivity_title_placeholder'|translate}}" [(ngModel)]="activity.title"></ion-input>
+    <ion-col col-3><ion-label>{{'addActivity_title_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addActivity_title_placeholder'|translate}}" [(ngModel)]="activity.title"></ion-input>
     </ion-item></ion-col>
     </ion-row>
      <ion-row>
 
-    <ion-col><ion-label>{{'addActivity_date_from_placeholder'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-datetime displayFormat="DD/MM/YYYY"  [(ngModel)]="dateFrom" placeholder="{{'addActivity_date_from_placeholder'|translate}}" ></ion-datetime>
+    <ion-col col-3><ion-label>{{'addActivity_date_from_placeholder'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-datetime displayFormat="DD/MM/YYYY"  [(ngModel)]="dateFrom" placeholder="{{'addActivity_date_from_placeholder'|translate}}" ></ion-datetime>
     </ion-item></ion-col>
     </ion-row>
          <ion-row>
-    <ion-col><ion-label>{{'addActivity_date_to_placeholder'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-datetime displayFormat="DD/MM/YYYY"  [(ngModel)]="dateTo" placeholder="{{'addActivity_date_to_placeholder'|translate}}" ></ion-datetime>
+    <ion-col col-3><ion-label>{{'addActivity_date_to_placeholder'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-datetime displayFormat="DD/MM/YYYY"  [(ngModel)]="dateTo" placeholder="{{'addActivity_date_to_placeholder'|translate}}" ></ion-datetime>
     </ion-item></ion-col>
     </ion-row>
 
       <ion-row>
 
-    <ion-col><ion-label>{{'addActivity_address_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addActivity_address_placeholder'|translate}}" [(ngModel)]="activity.location"></ion-input>
+    <ion-col col-3><ion-label>{{'addActivity_address_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addActivity_address_placeholder'|translate}}" [(ngModel)]="activity.location"></ion-input>
     </ion-item></ion-col>
     </ion-row>
       <ion-row>
 
-    <ion-col><ion-label>{{'addActivity_tutor_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addActivity_tutor_placeholder'|translate}}" [(ngModel)]="activity.contact"></ion-input>
+    <ion-col col-3><ion-label>{{'addActivity_tutor_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addActivity_tutor_placeholder'|translate}}" [(ngModel)]="activity.contact"></ion-input>
     </ion-item></ion-col>
     </ion-row>
       <ion-row>
 
-    <ion-col><ion-label>{{'addActivity_description_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addActivity_description_placeholder'|translate}}" [(ngModel)]="activity.description"></ion-input>
+    <ion-col col-3><ion-label>{{'addActivity_description_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addActivity_description_placeholder'|translate}}" [(ngModel)]="activity.description"></ion-input>
     </ion-item></ion-col>
     </ion-row>
      <ion-row *ngIf="certificate && certificate.documentPresent">
