--- a/frontend/studente/src/pages/notifications/notifications.html
+++ b/frontend/studente/src/pages/notifications/notifications.html
@@ -10,5 +10,8 @@
 </ion-header>
 
 <ion-content padding>
-  notifiche
+    <!--</ion-list>-->
+        <ion-card class="eperience-empty-list-label">
+      {{'notifications_empty_list_label'|translate}}
+  </ion-card>
 </ion-content>
