autocompletion and map (only certificate)

--- a/frontend/studente/src/index.html
+++ b/frontend/studente/src/index.html
@@ -15,6 +15,7 @@
   <script src="cordova.js"></script>
 
   <link href="build/main.css" rel="stylesheet">
+  <link href="assets/leaflet.css" rel="stylesheet"> 
   
   <script>
     function init() {
