--- a/frontend/studente/src/pages/institute/subjects.html
+++ b/frontend/studente/src/pages/institute/subjects.html
@@ -6,22 +6,31 @@
         <div class="subject-title">
             {{'subjects_registrations_label'|translate}}
         </div>
-        <div *ngFor="let subject of subjects">
-            <div class="single-subject">
-                <div class="single-subject-title">
-                            {{'subjects_registrations_title_label'|translate}}
-{{subject.experience.attributes.title}}
-                </div>
-                <div class="single-subject-teacher">
-                              {{'subjects_registrations_teacher_label'|translate}}
-{{subject.experience.attributes.teacher}}
-                </div>
-            </div>
+        <ion-grid>
+            <ion-row>
+                <ion-col class="single-subject-header">
+                    {{'subjects_registrations_title_label'|translate}}
 
-        </div>
+                </ion-col>
+                <ion-col  class="single-subject-header">
+                    {{'subjects_registrations_teacher_label'|translate}}
+
+                </ion-col>
+            </ion-row>
+            <ion-row *ngFor="let subject of subjects">
+                <!--<div class="single-subject">-->
+                <ion-col class="single-subject-title">
+                    {{subject.experience.attributes.title}}
+                </ion-col>
+                <ion-col class="single-subject-teacher">
+                    {{subject.experience.attributes.teacher}}
+                </ion-col>
+                <!--</div>-->
+            </ion-row>
+        </ion-grid>
     </div>
     <div *ngIf="subjects && subjects.length==0">
-       {{'subjects_no_registrations_label'|translate}}
+        {{'subjects_no_registrations_label'|translate}}
     </div>
 
 </div>
