--- a/frontend/studente/src/pages/addCertification/addCertification.html
+++ b/frontend/studente/src/pages/addCertification/addCertification.html
@@ -9,62 +9,114 @@
 <ion-content padding>
   <ion-grid>
 
-     <ion-row>
-    <ion-col col-3><ion-label>{{'addCertificate_title_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addCertificate_title_placeholder'|translate}}" [(ngModel)]="certification.title"></ion-input>
-    </ion-item></ion-col>
-    </ion-row>
-     <ion-row>
-
-    <ion-col col-3><ion-label>{{'addCertificate_dateFrom_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-datetime displayFormat="DD/MM/YYYY"  [(ngModel)]="dateFrom" placeholder="{{'addCertificate_date_from_placeholder'|translate}}" ></ion-datetime>
-    </ion-item></ion-col>
-    </ion-row>
-         <ion-row>
-    <ion-col col-3><ion-label>{{'addCertificate_dateTo_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-datetime displayFormat="DD/MM/YYYY"  [(ngModel)]="dateTo" placeholder="{{'addCertificate_date_to_placeholder'|translate}}" ></ion-datetime>
-    </ion-item></ion-col>
-    </ion-row>
-      <ion-row>
-
-    <ion-col col-3><ion-label>{{'addCertificate_address_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addCertificate_address_placeholder'|translate}}" [(ngModel)]="certification.location"></ion-input>
-    </ion-item></ion-col>
-    </ion-row>
-      <ion-row>
-
-    <ion-col col-3><ion-label>{{'addCertificate_tutor_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addCertificate_tutor_placeholder'|translate}}" [(ngModel)]="certification.contact"></ion-input>
-    </ion-item></ion-col>
-    </ion-row>
-      <ion-row>
-
-    <ion-col col-3><ion-label>{{'addCertificate_description_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addCertificate_description_placeholder'|translate}}" [(ngModel)]="certification.description"></ion-input>
-    </ion-item></ion-col>
-    </ion-row>
-        <ion-row *ngIf="certificate && certificate.documentPresent">
-
-    <ion-col col-3><ion-label>{{'addCertificate_present_certificate_label'|translate}}</ion-label></ion-col>
-          <ion-col col-6> <ion-item>    <a download="certificate.txt" class="button label-button" href="{{ certificate.documentUri}}"><ion-icon name="md-download"></ion-icon></a>
-
-    </ion-item></ion-col>
-       <ion-col col-3>
-          <button class="button-add-stage label-button" ion-button clear (click)="removeActualCertificate()">{{'addCertificate_remove_actual_certificate_label'|translate}}</button>
-      </ion-col>
-      </ion-row>
     <ion-row>
-
-    <ion-col col-3>
-      <ion-label>{{'addCertificate_load_certificate_label'|translate}}</ion-label>
-    </ion-col>
-      <ion-col col-6>
+      <ion-col col-3>
+        <ion-label>{{'addCertificate_title_label'|translate}}</ion-label>
+      </ion-col>
+      <ion-col>
         <ion-item>
-          <input id = "uploadInputFile" accept="application/pdf" type="file" ng2FileSelect [uploader]="uploader" />
+          <ion-input type="text" placeholder="{{'addCertificate_title_placeholder'|translate}}" [(ngModel)]="certification.title"></ion-input>
         </ion-item>
       </ion-col>
-       <ion-col col-3>
-          <button class="button-add-stage label-button" ion-button clear (click)="removeCertification()">{{'addCertificate_remove_certificate_label'|translate}}</button>
+    </ion-row>
+    <ion-row>
+
+      <ion-col col-3>
+        <ion-label>{{'addCertificate_dateFrom_label'|translate}}</ion-label>
+      </ion-col>
+      <ion-col>
+        <ion-item>
+          <ion-datetime displayFormat="DD/MM/YYYY" [(ngModel)]="dateFrom" placeholder="{{'addCertificate_date_from_placeholder'|translate}}"></ion-datetime>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col col-3>
+        <ion-label>{{'addCertificate_dateTo_label'|translate}}</ion-label>
+      </ion-col>
+      <ion-col>
+        <ion-item>
+          <ion-datetime displayFormat="DD/MM/YYYY" [(ngModel)]="dateTo" placeholder="{{'addCertificate_date_to_placeholder'|translate}}"></ion-datetime>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+
+      <ion-col col-3>
+        <ion-label>{{'addCertificate_address_label'|translate}}</ion-label>
+      </ion-col>
+      <ion-col>
+        <ion-item>
+          <ion-input type="text" placeholder="{{'addCertificate_address_placeholder'|translate}}" (input)="getItems($event)" [(ngModel)]="certification.location">
+          </ion-input>
+
+        </ion-item>
+          <ion-list class="autocompletion-list" *ngIf="showList">
+            <button ion-item *ngFor="let item of items" (click)="selectPlace(item)">
+              {{ item.name }}
+            </button>
+          </ion-list>
+      </ion-col>
+      <ion-col col-3> <button class="action-button" ion-button icon-only (click)="chooseAddress()"><ion-icon name="md-map"></ion-icon></button></ion-col>
+    </ion-row>
+    <ion-row>
+
+      <ion-col col-3>
+        <ion-label>{{'addCertificate_tutor_label'|translate}}</ion-label>
+      </ion-col>
+      <ion-col>
+        <ion-item>
+          <ion-input type="text" placeholder="{{'addCertificate_tutor_placeholder'|translate}}" [(ngModel)]="certification.contact"></ion-input>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+
+      <ion-col col-3>
+        <ion-label>{{'addCertificate_description_label'|translate}}</ion-label>
+      </ion-col>
+      <ion-col>
+        <ion-item>
+          <ion-textarea type="text" placeholder="{{'addCertificate_description_placeholder'|translate}}" [(ngModel)]="certification.description"></ion-textarea>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row *ngIf="certificate && certificate.documentPresent">
+
+      <ion-col col-3>
+        <ion-label>{{'addCertificate_present_certificate_label'|translate}}</ion-label>
+      </ion-col>
+      <ion-col col-6>
+        <ion-item>
+          <a download="certificate.txt" class="button label-button" href="{{ certificate.documentUri}}">
+            <ion-icon name="md-download"></ion-icon>
+          </a>
+
+        </ion-item>
+      </ion-col>
+      <ion-col col-3>
+        <button class="button-add-stage label-button" ion-button clear (click)="removeActualCertificate()">{{'addCertificate_remove_actual_certificate_label'|translate}}</button>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+
+      <ion-col col-3>
+        <ion-label>{{'addCertificate_load_certificate_label'|translate}}</ion-label>
+      </ion-col>
+      <ion-col col-6>
+        <ion-item>
+          <input id="uploadInputFile" accept="application/pdf" type="file" ng2FileSelect [uploader]="uploader" />
+        </ion-item>
+      </ion-col>
+      <ion-col col-3>
+        <button class="button-add-stage label-button" ion-button clear (click)="removeCertification()">{{'addCertificate_remove_certificate_label'|translate}}</button>
       </ion-col>
 
     </ion-row>
 
-      <ion-row>
- <ion-col><button  class="action-button " ion-button block (click)="addCertification()">{{'save_button_label'|translate}}</button></ion-col><ion-col><button  class="action-button " ion-button block  (click)="discard()">{{'cancel_button_label'|translate}}</button></ion-col>
+    <ion-row>
+      <ion-col><button class="action-button " ion-button block (click)="addCertification()">{{'save_button_label'|translate}}</button></ion-col>
+      <ion-col><button class="action-button " ion-button block (click)="discard()">{{'cancel_button_label'|translate}}</button></ion-col>
     </ion-row>
   </ion-grid>
 
